# ml-playstore

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_eda_baseline_card.ipynb
notebooks/deliverable1/: eda_baseline_card.ipynb
notebooks/deliverable2/: eda_baseline_card.ipynb  main.py  main_classification.py  pipeline_classification.py  pipeline_data_preparation.py  pipeline_train_tunning.py
